--- a/backend_test/backend_test.csproj
+++ b/backend_test/backend_test.csproj
@@ -50,7 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration.cs" />
+    <Compile Include="UserConfig.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
