--- a/gamerack_api/gamerack_api.csproj
+++ b/gamerack_api/gamerack_api.csproj
@@ -52,11 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debug.cs" />
+    <Compile Include="Metadata.cs" />
     <Compile Include="UserConfig.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
