unify branding/colours

--- a/gamerack/gamerack.csproj
+++ b/gamerack/gamerack.csproj
@@ -163,7 +163,7 @@
     <Resource Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="fulllock-white.png" />
+    <Resource Include="wordmark-white.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
