--- a/plugins/plugin_steam/plugin_steam.csproj
+++ b/plugins/plugin_steam/plugin_steam.csproj
@@ -70,13 +70,16 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="steam_logo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <Resource Include="steam_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.Contracts">
       <Version>10.0.18362.2005</Version>
+    </PackageReference>
+    <PackageReference Include="ModernWpfUI">
+      <IncludeAssets>compile</IncludeAssets>
+      <Version>0.9.4</Version>
+      <Private>true</Private>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
@@ -87,6 +90,12 @@
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
