--- a/gamerack/gamerack.csproj
+++ b/gamerack/gamerack.csproj
@@ -171,6 +171,9 @@
     <PackageReference Include="ModernWpfUI">
       <Version>0.9.4</Version>
     </PackageReference>
+    <PackageReference Include="VirtualizingWrapPanel">
+      <Version>1.5.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
