--- a/gamerack/gamerack.csproj
+++ b/gamerack/gamerack.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EF3C6D36-72FA-4899-BF4A-1419C18E5A51}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>CI536</RootNamespace>
     <AssemblyName>Gamerack</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -66,6 +66,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EditGameConfig.xaml.cs">
+      <DependentUpon>EditGameConfig.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EditGameInfo.xaml.cs">
       <DependentUpon>EditGameInfo.xaml</DependentUpon>
     </Compile>
@@ -92,6 +95,10 @@
       <DependentUpon>Splash.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPFUtil.cs" />
+    <Page Include="EditGameConfig.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="EditGameInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
