--- a/gamerack/gamerack.csproj
+++ b/gamerack/gamerack.csproj
@@ -86,8 +86,14 @@
     <Compile Include="MetadataSearch.xaml.cs">
       <DependentUpon>MetadataSearch.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Notices.xaml.cs">
+      <DependentUpon>Notices.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PluginDefault.cs" />
     <Compile Include="PluginManager.cs" />
+    <Compile Include="AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
@@ -128,6 +134,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MetadataSearch.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AboutPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Notices.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -173,9 +187,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.1.31</Version>
-    </PackageReference>
     <PackageReference Include="ModernWpfUI">
       <Version>0.9.4</Version>
     </PackageReference>
@@ -191,6 +202,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="wordmark-black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Legal\modernwpf.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Legal\virtualizingwrappanel.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Legal\newtonsoftjson.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Legal\steamkit.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
